@@ -11,15 +11,17 @@
  * along with this software (see the LICENSE.md file). If not, see
  * <http://creativecommons.org/publicdomain/zero/1.0/>.
  */
-package org.moqui.context;
+package org.moqui.util;
 
 import java.util.*;
 
+@SuppressWarnings("unused")
 public class ContextStack implements Map<String, Object> {
     protected final static org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(ContextStack.class);
 
-    // Using ArrayList for more efficient iterating, this alone eliminate about 40% of the run time in get()
-    private ArrayList<ArrayList<MapWrapper>> contextStack = null;
+    private LinkedList<ArrayList<MapWrapper>> contextStack = null;
+    private LinkedList<Map<String, Object>> contextCombinedStack = null;
+
     private ArrayList<MapWrapper> stackList = new ArrayList<>();
     private Map<String, Object> topMap = null;
     private Map<String, Object> combinedMap = null;
@@ -27,15 +29,11 @@ public class ContextStack implements Map<String, Object> {
     private boolean toStringRecursion = false;
 
     public ContextStack() {
-        // start with a single Map
-        clearCombinedMap();
-        push();
+        freshContext();
     }
     public ContextStack(boolean includeContext) {
         this.includeContext = includeContext;
-        // start with a single Map
-        clearCombinedMap();
-        push();
+        freshContext();
     }
 
     // Internal methods for managing combinedMap
@@ -43,6 +41,13 @@ public class ContextStack implements Map<String, Object> {
     private void clearCombinedMap() {
         combinedMap = new HashMap<>();
         if (includeContext) combinedMap.put("context", this);
+    }
+    private void freshContext() {
+        stackList = new ArrayList<>();
+        combinedMap = new HashMap<>();
+        if (includeContext) combinedMap.put("context", this);
+        topMap = new HashMap<>();
+        stackList.add(0, new MapWrapper(this, topMap, combinedMap));
     }
     private void rebuildCombinedMap() {
         clearCombinedMap();
@@ -62,17 +67,6 @@ public class ContextStack implements Map<String, Object> {
         }
         combinedMap = parentCombined;
     }
-    /* now using MapWrapper.combined instead of this:
-    // faster than rebuildCombinedMap, but not by much
-    protected void resetCombinedEntries(Set<String> keySet) {
-        if (keySet.size() == 0) return;
-        // if (keySet.contains("context")) throw new IllegalArgumentException("Cannot reset combined entry with key 'context', reserved key");
-        // use a faster approach than rebuildCombinedMap()
-        // for each key in the popped Map see if a Map on the stack contains it and if so set it, otherwise remove it
-        int stackListSize = stackList.size();
-        for (String key : keySet) resetCombinedEntry(key, stackListSize);
-    }
-    */
     private void resetCombinedEntry(String key, int stackListSize) {
         if ("context".equals(key)) return;
         boolean found = false;
@@ -89,20 +83,20 @@ public class ContextStack implements Map<String, Object> {
 
     /** Push (save) the entire context, ie the whole Map stack, to create an isolated empty context. */
     public ContextStack pushContext() {
-        if (contextStack == null) contextStack = new ArrayList<>();
-        contextStack.add(0, stackList);
-        stackList = new ArrayList<>();
-        clearCombinedMap();
-        push();
+        if (contextStack == null) contextStack = new LinkedList<>();
+        if (contextCombinedStack == null) contextCombinedStack = new LinkedList<>();
+        contextStack.addFirst(stackList);
+        contextCombinedStack.addFirst(combinedMap);
+        freshContext();
         return this;
     }
 
     /** Pop (restore) the entire context, ie the whole Map stack, undo isolated empty context and get the original one. */
     public ContextStack popContext() {
         if (contextStack == null || contextStack.size() == 0) throw new IllegalStateException("Cannot pop context, no context pushed");
-        stackList = contextStack.remove(0);
+        stackList = contextStack.removeFirst();
+        combinedMap = contextCombinedStack.removeFirst();
         topMap = stackList.get(0).getWrapped();
-        rebuildCombinedMap();
         return this;
     }
 
@@ -144,13 +138,11 @@ public class ContextStack implements Map<String, Object> {
      * @return The first/top Map
      */
     public Map<String, Object> pop() {
-        if (topMap == null) {
-            throw new IllegalArgumentException("ContextStack is empty, cannot pop the context");
-            // return null;
-        }
+        int initialStackListSize = stackList.size();
+        if (initialStackListSize == 0) throw new IllegalArgumentException("ContextStack is empty, cannot pop the context");
 
         Map<String, Object> oldMap = stackList.remove(0);
-        if (stackList.size() > 0) {
+        if (initialStackListSize > 1) {
             MapWrapper topWrapper = stackList.get(0);
             topMap = topWrapper.getWrapped();
             combinedMap = topWrapper.getCombined();
@@ -203,46 +195,14 @@ public class ContextStack implements Map<String, Object> {
 
     public boolean containsKey(Object key) {
         return combinedMap.containsKey(key);
-
-        /* with combinedMap now handling all changes this is a simple call
-        if (combinedMap.containsKey(key)) return true;
-
-        int size = stackList.size();
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            if (key == null && curMap instanceof Hashtable) continue;
-            if (curMap.containsKey(key)) return true;
-        }
-        return false;
-        */
     }
 
     public boolean containsValue(Object value) {
         return combinedMap.containsValue(value);
-
-        /* with combinedMap now handling all changes this is a simple call
-        if (combinedMap.containsValue(value)) return true;
-
-        // this keeps track of keys looked at for values at each level of the stack so that the same key is not
-        // considered more than once (the earlier Maps overriding later ones)
-        Set<Object> keysObserved = new HashSet<>();
-        int size = stackList.size();
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            for (Map.Entry curEntry: curMap.entrySet()) {
-                if (!keysObserved.contains(curEntry.getKey())) {
-                    keysObserved.add(curEntry.getKey());
-                    if (value == null) {
-                        if (curEntry.getValue() == null) return true;
-                    } else {
-                        if (value.equals(curEntry.getValue())) return true;
-                    }
-                }
-            }
-        }
-        return false;
-        */
     }
+
+    /** For faster access to multiple entries; do not write to this Map or use when any changes to ContextStack are possible */
+    public Map<String, Object> getCombinedMap() { return combinedMap; }
 
     public Object getByString(String key) {
         return combinedMap.get(key);
@@ -262,50 +222,6 @@ public class ContextStack implements Map<String, Object> {
 
         // with combinedMap now handling all changes this is a simple call
         return combinedMap.get(key);
-
-        /*
-        // optimize for non-null get, avoid double lookup with containsKey/get
-        // it sure would be nice if there was a getEntry method in Java Maps... could always avoid the double lookup
-        Object value = combinedMap.get(key);
-        if (value != null) return value;
-
-        // we already got it and it's null by this point
-        if (combinedMap.containsKey(key)) return null;
-
-        // NOTE: no longer needed, "context" added to combinedMap (not used for toString, equals(), etc so won't result in infinite recursion
-        // the "context" key always gets a self-reference; look for this last as it takes a sec and is uncommon
-        // if ("context".equals(key)) return this;
-
-        // this is slower than the combinedMap, but just in case a Map on the stack was modified directly (instead
-        //     of through ContextStack) look through all maps on the stack
-        int size = stackList.size();
-        Object foundValue = null;
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            try {
-                if (key == null && curMap instanceof Hashtable) continue;
-                // optimize for non-null get, avoid double lookup with containsKey/get
-                value = curMap.get(key);
-                if (value != null) {
-                    foundValue = value;
-                    break;
-                }
-                if (curMap.containsKey(key)) {
-                    foundValue = null;
-                    break;
-                }
-            } catch (Exception e) {
-                logger.error("Error getting value for key [" + key + "], returning null", e);
-                foundValue = null;
-                break;
-            }
-        }
-
-        // remember what we found, even if null, to avoid searching the stackList in future calls
-        combinedMap.put(key, foundValue);
-
-        return foundValue;
-        */
     }
 
     public Object put(String key, Object value) {
@@ -320,14 +236,11 @@ public class ContextStack implements Map<String, Object> {
         return oldVal;
     }
 
-    public void putAll(Map<? extends String, ?> arg0) {
-        if (arg0 == null) return;
-        for (Map.Entry<? extends String, ?> entry : arg0.entrySet()) {
-            String key = entry.getKey();
-            if ("context".equals(key)) continue;
-            combinedMap.put(key, entry.getValue());
-            topMap.put(key, entry.getValue());
-        }
+    public void putAll(Map<? extends String, ?> theMap) {
+        if (theMap == null) return;
+        combinedMap.putAll(theMap);
+        if (includeContext) combinedMap.put("context", this);
+        topMap.putAll(theMap);
     }
 
     public void clear() {
@@ -342,58 +255,15 @@ public class ContextStack implements Map<String, Object> {
 
     public Set<String> keySet() {
         return combinedMap.keySet();
-
-        /* with combinedMap now handling all changes this is a simple call
-        Set<String> resultSet = new HashSet<>();
-        resultSet.add("context");
-        int size = stackList.size();
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            resultSet.addAll(curMap.keySet());
-        }
-        return Collections.unmodifiableSet(resultSet);
-        */
     }
 
     public Collection<Object> values() {
         return combinedMap.values();
-
-        /* with combinedMap now handling all changes this is a simple call
-        Set<Object> keysObserved = new HashSet<>();
-        List<Object> resultValues = new LinkedList<>();
-        int size = stackList.size();
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            for (Map.Entry curEntry: curMap.entrySet()) {
-                if (!keysObserved.contains(curEntry.getKey())) {
-                    keysObserved.add(curEntry.getKey());
-                    resultValues.add(curEntry.getValue());
-                }
-            }
-        }
-        return Collections.unmodifiableCollection(resultValues);
-        */
     }
 
     /** @see java.util.Map#entrySet() */
     public Set<Map.Entry<String, Object>> entrySet() {
         return combinedMap.entrySet();
-
-        /* with combinedMap now handling all changes this is a simple call
-        Set<Object> keysObserved = new HashSet<>();
-        Set<Map.Entry<String, Object>> resultEntrySet = new HashSet<>();
-        int size = stackList.size();
-        for (int i = 0; i < size; i++) {
-            Map<String, Object> curMap = stackList.get(i);
-            for (Map.Entry<String, Object> curEntry: curMap.entrySet()) {
-                if (!keysObserved.contains(curEntry.getKey())) {
-                    keysObserved.add(curEntry.getKey());
-                    resultEntrySet.add(curEntry);
-                }
-            }
-        }
-        return Collections.unmodifiableSet(resultEntrySet);
-        */
     }
 
     @Override
